Fixed the alignment on the header class

--- a/main.css
+++ b/main.css
@@ -3,8 +3,9 @@ body {
 }
 
 .header {
-    display: inline-block;
+    display: block;
     justify-content: center;
+    align-items: center;
     text-align: center;
     margin: 20px 20px 20px 20px;
 }
